--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -10,6 +10,13 @@
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
     </head>
     <body>
+    <div id="header">
+    <div id="menu"></div>
+    </div>
+        <div id="content">
         @content
+        </div>
+     <div id="footer">
+     </div>
     </body>
 </html>
