--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,7 +4,7 @@
 
 @main("Polltoad") {
 
-<h1>@politicians.size() politician(s)</h1>
+<h1>@politicians.size politician(s)</h1>
 
 <ul>
 	Name &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Constituency @for(politician <-
