--- a/app/views/state.scala.html
+++ b/app/views/state.scala.html
@@ -1,20 +1,30 @@
 @(states: List[State], stateForm: Form[State])
 
 @import helper._ 
+@import helper.twitterBootstrap._
 
 @main("Polltoad-State") {
+<ul class="nav nav-pills">
+  <li class="active"><a href="#tablediv" data-toggle="tab">States</a></li>
+  <li><a href="#adddiv" data-toggle="tab">Add</a></li>
+  
+</ul>
+<div id='content' class="tab-content">
+<div class="tab-pane active" id="tablediv">
 
-<div>
-<h1>@states.size() State(s) and UT(s)</h1>
+<h2>@states.size State(s) and UT(s)</h2>
 
 
-<table>
-   <th>Name</th><th></th>
+<table class="table">
+   <th>Type</th><th>Name</th><th>Remove</th>
    
 	  @for(state <-	states) {
 	  <tr>
 	  <td>
-	@state.name
+	  @if(state.ut) {UT} else {State}
+	  </td>
+	  <td>
+		@state.name
 	  </td>
 	  <td>
 		@form(routes.Application.deleteState(state.stateId)) { <input
@@ -24,17 +34,15 @@
 
 </table>
 </div>
-<div>
+<div  class="tab-pane" id="adddiv">
 <h2>Add a new state</h2>
 
 @form(routes.Application.newState()) {
 
-
-<h2>State</h2> 
 <div>
 	@inputText(stateForm("name"),'_label ->"Name",'_showConstraints -> false)
 
-   @checkbox(field=stateForm("ut"),'_label ->"UT")
+    @checkbox(field=stateForm("ut"),'_label ->"UT")
 
 </div>
 
@@ -42,4 +50,5 @@
 
 } 
 }
+</div>
 </div>
