--- a/.target/views/main.scala.html
+++ b/.target/views/main.scala.html
@@ -6,10 +6,23 @@
     <head>
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+         <link rel="stylesheet" media="screen" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js" type="text/javascript"></script>
     </head>
     <body>
+    <div class="container">
+    <div id="header">
+    <div id="menu"></div>
+    </div>
+    	<br/>
+        <div id="content">
         @content
+        </br>
+        </div>
+     <div id="footer">
+     </div>
+     </div>
     </body>
 </html>
