--- a/app/views/district.scala.html
+++ b/app/views/district.scala.html
@@ -4,13 +4,18 @@
 
 @main("Polltoad-Districts") {
 
-<div>
-<h1>@districts.size() Districts(s)</h1>
+<ul class="nav nav-pills">
+  <li class="active"><a href="#tablediv" data-toggle="tab">Districts</a></li>
+  <li><a href="#adddiv" data-toggle="tab">Add</a></li>
+</ul>
+<div id='content' class="tab-content">
+<div class="tab-pane active" id="tablediv">
+<h2>@districts.size Districts(s)</h2>
 
-<table>
+<table class="table">
 
    <th>
-	Name </th> <th> State</th><th></th>
+	Name </th> <th> State</th><th>Remove</th>
 	 @for(district <-	districts) {
 	 <tr>
 	 <td>
@@ -27,13 +32,11 @@
 
 </table>
 </div>
-<div>
+<div  class="tab-pane" id="adddiv">
 <h2>Add a new district</h2>
 
 @form(routes.Application.newDistrict()) {
 
-
-<h2>District</h2> 
 <div>
 
 	@inputText(districtForm("name"),'_label ->"Name",'_showConstraints -> false)
@@ -46,4 +49,5 @@
 
 } 
 }
+</div>
 </div>
