--- a/app/views/politician.scala.html
+++ b/app/views/politician.scala.html
@@ -1,24 +1,46 @@
 @(politicians: List[Politician],constituencies: Map[String,String],politicalparties: Map[String,String], politicianForm: Form[Politician])
 
 @import helper._ 
+@import helper.twitterBootstrap._
 
 @main("Polltoad-Politician") {
 
-<h1>@politicians.size() politician(s)</h1>
 
-<table>
-	<th>Name </th><th> Date of Birth </th> <th>Place of Birth </th><th></th>
-	
+
+<ul class="nav nav-pills">
+  <li class="active"><a href="#tablediv" data-toggle="tab">Politicians</a></li>
+  <li><a href="#adddiv" data-toggle="tab">Add</a></li>
+  
+</ul>
+<div id='content' class="tab-content">
+<div class="tab-pane active" id="tablediv">
+<h2>@politicians.size politician(s)</h2>
+<table class="table">
+	<th>Name </th><th> Date of Birth </th> <th>Place of Birth </th><th>Political Party</th><th>Constituency</th>
+	<th>Education</th><th>Profession</th><th>Remove</th>
 	@for(politician <- politicians) {
 	<tr>
 	<td>
 	@politician.person.name 
 	</td>
 	<td>
-		@politician.person.dateofbirth
+		@politician.person.formattedDOB()
     </td>
 	<td>
 		@politician.person.placeofbirth
+    </td>
+    <td>
+		
+		@politician.currentpoliticalparty.name
+    </td>
+    <td>
+		@politician.currentconstituency.name
+    </td>
+    <td>
+		@politician.education.education
+    </td>
+    <td>
+		@politician.profession.profession
     </td>
     <td>
 		@form(routes.Application.deletePolitician(politician.politicianId)) { <input
@@ -26,13 +48,12 @@
 		</td>
 	</tr> }
 </table>
-
+</div>
+<div class="tab-pane" id="adddiv">
 <h2>Add a new politician</h2>
 
 @form(routes.Application.newPolitician()) {
-
-
-<h2>Personal Details</h2> 
+	 
 <div>
 	@inputText(politicianForm("person.name"),'_label ->"Name",'_showConstraints -> false)
 
@@ -40,31 +61,20 @@
 
 	@inputText(politicianForm("person.placeofbirth"),'_label -> "Place of Birth",'_showConstraints -> true)
 
-</div>
 
-<h2>Current Constituency</h2> 
-<div>
-    @select(politicianForm("constituency.constituencyId"),options(constituencies),'_label->"Choose Constituency (*)")
-</div>
+    @select(politicianForm("currentconstituency.constituencyId"),options(constituencies),'_label->"Choose Constituency (*)")
 
-<h2>Current Political Party</h2>
-<div> 
-	 @select(politicianForm("currentpoliticalparty.politicalpartyId"),options(politicalparties),'_label->"Choose Current Political Party (*)")
-</div>
+	 @select(politicianForm("currentpoliticalparty.politicalPartyId"),options(politicalparties),'_label->"Choose Current Political Party (*)")
 
-<h2>Education</h2>
-<div> 
 	@inputText(politicianForm("education.education"),'_label ->"Qualification",'_showConstraints -> false)
 
-</div>
 
-<h2>Profession</h2>
-<div> 
 	@inputText(politicianForm("profession.profession"),'_label ->"Profession",'_showConstraints -> false)
 </div>
-
 
 <input type="submit" value="Create">
 
 } 
 }
+</div>
+</div>
