--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,12 +14,38 @@
     <body>
     <div class="container">
     <div id="header">
-    <div id="menu"></div>
+    <div id="menu">
+    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+    <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="politicians">Polltoad</a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li ><a href="politicians">Politicians</a></li>
+            <li><a href="politicalparties">Political Parties</a></li>
+            <li><a href="states">States</a></li>
+            <li><a href="districts">Districts</a></li>
+            <li><a href="constituencies">Constituency</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
+      </div>
     </div>
-    	<br/>
+    </div>
+    </div>
+    </div>
+    	<br/><br/><br/><br/>
+    	<div class="container">
         <div id="content">
         @content
         </br>
+        </div>
         </div>
      <div id="footer">
      </div>
