--- a/app/views/constituency.scala.html
+++ b/app/views/constituency.scala.html
@@ -5,8 +5,7 @@
 
 @main("Polltoad-Constituency") {
 <ul class="nav nav-pills">
-  <li class="active"><a href="#tablediv" data-toggle="tab">Districts</a></li>
-  <li><a href="#adddiv" data-toggle="tab">Add</a></li>
+  <li class="active"><a href="#tablediv" data-toggle="tab">Constituencies</a></li>
 </ul>
 <div id='content' class="tab-content">
 <div class="tab-pane active" id="tablediv">
@@ -14,10 +13,12 @@
 
 <table class="table">
 
-   <th>
-	Name </th> <th> State</th><th>Type</th><th>Remove</th>
+   <th>#</th><th>Name </th> <th> State</th><th>Type</th>
 	 @for(constituency <-	constituencies) {
 	 <tr>
+	 <td>
+	 @(constituencies.indexOf(constituency)+1)
+	 </td>
 	 <td>
 	@constituency.name
      </td>
@@ -32,33 +33,10 @@
 	    }
 	
 	 </td>
-	 <td>
-		@form(routes.Application.deleteConstituency(constituency.constituencyId)) { <input
-		type="submit" value="Delete"> }
-	</td>
 	</tr>}
 
 </table>
 </div>
-<div  class="tab-pane" id="adddiv">
-<h2>Add a new constituency</h2>
 
-@form(routes.Application.newConstituency()) {
-<div>
-
-	@inputText(constituencyForm("name"),'_label ->"Name",'_showConstraints -> false)
-	
-	@inputText(constituencyForm("population"),'_label ->"Voter Population",'_showConstraints -> false)
-
-    @select(constituencyForm("state.stateId"),options(states),'_label->"Choose State (*)")
-    
-   @checkbox(field=constituencyForm("parliament"),'_label ->"Parliamentary constituency")
-
-</div>
-
-<input type="submit" value="Create">
-
-} 
 }
-</div>
 </div>
