--- a/app/views/district.scala.html
+++ b/app/views/district.scala.html
@@ -6,7 +6,6 @@
 
 <ul class="nav nav-pills">
   <li class="active"><a href="#tablediv" data-toggle="tab">Districts</a></li>
-  <li><a href="#adddiv" data-toggle="tab">Add</a></li>
 </ul>
 <div id='content' class="tab-content">
 <div class="tab-pane active" id="tablediv">
@@ -14,40 +13,25 @@
 
 <table class="table">
 
-   <th>
-	Name </th> <th> State</th><th>Remove</th>
+  <th>#</th> <th>
+	Name </th> <th> State</th>
 	 @for(district <-	districts) {
 	 <tr>
+	 <td>
+	  @(districts.indexOf(district)+1)
+	 </td>
 	 <td>
 	@district.name
      </td>
      <td>
 	    @district.state.name
 	 </td>
-	 <td>
-		@form(routes.Application.deleteDistrict(district.districtId)) { <input
-		type="submit" value="Delete"> }
-	</td>
+	 
 	</tr>}
 
 </table>
 </div>
-<div  class="tab-pane" id="adddiv">
-<h2>Add a new district</h2>
 
-@form(routes.Application.newDistrict()) {
-
-<div>
-
-	@inputText(districtForm("name"),'_label ->"Name",'_showConstraints -> false)
-
-    @select(districtForm("state.stateId"),options(states),'_label->"Choose State (*)")
-
-</div>
-
-<input type="submit" value="Create">
-
-} 
 }
-</div>
+
 </div>
