--- a/app/views/state.scala.html
+++ b/app/views/state.scala.html
@@ -6,8 +6,6 @@
 @main("Polltoad-State") {
 <ul class="nav nav-pills">
   <li class="active"><a href="#tablediv" data-toggle="tab">States</a></li>
-  <li><a href="#adddiv" data-toggle="tab">Add</a></li>
-  
 </ul>
 <div id='content' class="tab-content">
 <div class="tab-pane active" id="tablediv">
@@ -16,39 +14,21 @@
 
 
 <table class="table">
-   <th>Type</th><th>Name</th><th>Remove</th>
+   <th>#</th><th>Type</th><th>Name</th>
    
 	  @for(state <-	states) {
 	  <tr>
+	  <td>@(states.indexOf(state)+1)</td>
 	  <td>
 	  @if(state.ut) {UT} else {State}
 	  </td>
 	  <td>
 		@state.name
 	  </td>
-	  <td>
-		@form(routes.Application.deleteState(state.stateId)) { <input
-		type="submit" value="Delete"> }
-		</td>
 	</tr> }
 
 </table>
 </div>
-<div  class="tab-pane" id="adddiv">
-<h2>Add a new state</h2>
 
-@form(routes.Application.newState()) {
-
-<div>
-	@inputText(stateForm("name"),'_label ->"Name",'_showConstraints -> false)
-
-    @checkbox(field=stateForm("ut"),'_label ->"UT")
-
-</div>
-
-<input type="submit" value="Create">
-
-} 
 }
-</div>
 </div>
