--- a/app/views/admin/district.scala.html
+++ b/app/views/admin/district.scala.html
@@ -25,7 +25,7 @@
 	    @district.state.name
 	 </td>
 	 <td>
-		@form(routes.Application.deleteDistrict(district.districtId)) { <input
+		@form(routes.DistrictController.deleteDistrict(district.districtId)) { <input
 		type="submit" value="Delete"> }
 	</td>
 	</tr>}
@@ -35,7 +35,7 @@
 <div  class="tab-pane" id="adddiv">
 <h2>Add a new district</h2>
 
-@form(routes.Application.newDistrict()) {
+@form(routes.DistrictController.newDistrict()) {
 
 <div>
 
